# api-client

./: .gitattributes  .gitignore  MANIFEST.in  README.md  httpBase.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: cicd.yml  python-package-integration-tests.yml  python-package-tests.yml  python-package-unit-tests.yml
endpoints/: __init__.py  bank_entity.py  bank_materials.py  bank_workflows.py  characteristic.py  characteristics.py  charges.py  entity.py  enums.py  jobs.py  login.py  logout.py  materials.py  materialsBank.py  projects.py  pseudos.py  raw_properties.py  refined_properties.py  utils.py  workflows.py
endpoints/http/: http_base.py
endpoints/mixins/: default.py
exabyte_api_client/: __init__.py  _version.py  client.py
exabyte_api_client/endpoints/: __init__.py  bank_entity.py  bank_materials.py  bank_workflows.py  charges.py  entity.py  enums.py  jobs.py  login.py  logout.py  materials.py  projects.py  raw_properties.py  refined_properties.py  workflows.py
exabyte_api_client/endpoints/mixins/: set.py
exabyte_api_client/utils/: http.py  materials.py
examples/: create_and_submit_job.py  create_material.py  get_auth_params.py  get_materials.py  get_materials_by_formula.py  run-dft-workflow.py
lib/: http_base.py
src/py/exabyte_api_client/: client.py
src/py/exabyte_api_client/endpoints/: bank_materials.py  bank_workflows.py  charges.py  jobs.py  login.py  logout.py  materials.py  metaproperties.py  projects.py  properties.py
src/py/exabyte_api_client/utils/: http.py
src/py/mat3ra/: __init__.py
src/py/mat3ra/api_client/: __init__.py  client.py  models.py  settings.py
src/py/mat3ra/api_client/client/: __init__.py  client.py  constants.py
src/py/mat3ra_api_client/: __init__.py  client.py  helpers.py
src/py/mat3ra_api_client/endpoints/: __init__.py  bank_entity.py  bank_workflows.py  login.py  projects.py  properties.py
src/py/mat3ra_api_client/utils/: http.py  materials.py
tests/: __init__.py  conftest.py
tests/data/: characteristic.json  job.json  login.json  logout.json  material.json  new-job.json  new-material.json  workflow.json
tests/integration/: __init__.py  entity.py  test_characteristic.py  test_characteristics.py  test_jobs.py  test_materials.py  test_materialsBank.py  test_pseudos.py  test_workflows.py
tests/py/: conftest.py
tests/py/integration/: __init__.py  entity.py  test_jobs.py  test_materials.py
tests/py/unit/: __init__.py  entity.py  test_bank_materials.py  test_bank_workflows.py  test_client.py  test_httpBase.py  test_jobs.py  test_login.py  test_logout.py  test_materials.py  test_properties.py  test_workflows.py
tests/unit/: __init__.py  entity.py  test_bank_materials.py  test_bank_workflows.py  test_characteristic.py  test_characteristics.py  test_client.py  test_httpBase.py  test_jobs.py  test_login.py  test_logout.py  test_materials.py  test_materialsBank.py  test_properties.py  test_pseudos.py  test_refined_properties.py  test_workflows.py
(+18 files in other folders)
