[metadata]
name = exabyte-api-client
author = Exabyte Inc.
author_email = info@exabyte.io
description = Exabyte Python Client for RESTful API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Exabyte-io/exabyte-api-client
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6
install_requires =
    requests==2.20.1

[options.extras_require]
test =
    coverage[toml]>=5.3
    mock>=1.3.0

[options.packages.find]
where = .
exclude =
    tests
    tests.*
